new: ex2.4-bonus

--- a/exercises/2.1-2-3-4/src/components/Footer/Footer.css
+++ b/exercises/2.1-2-3-4/src/components/Footer/Footer.css
@@ -1,4 +1,9 @@
 .footerImage{
     height: 40%;
-    width: 50%;
+    width: 95%;
+}
+
+footer{
+    background-color: black;
+    padding-left: 5%;
 }
